# myrender

./: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  rasterize.cpp  rasterize.h  tgaimage.h
